<resources>
    <string name="app_name">Sashimi Restaurant</string>
    <string name="home">Home</string>
    <string name="feedback">Feedback</string>
    <string name="Contact">Contact</string>
    <string name="history">History</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_food">Popular Food</string>
    <string name="todo">TODO</string>
    <string name="title_activity_food_detail">FoodDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="product_added_to_cart">Product added to cart</string>
    <string name="swipe_to_delete_item">swipe to delete item</string>
    <string name="bills">Bills</string>
    <string name="no_order_yet">No order yet</string>
    <string name="starting_order">Starting Order</string>
    <string name="order_now">Order now</string>
    <string name="total">Total</string>
    <string name="label_payment">Payment Method</string>
    <string name="_1">1</string>
    <string name="finish_order">Finish Order</string>
    <string name="delivery_to">Delivery to</string>
    <string name="note_to_correct_delivery_address">Note to correct delivery address</string>
    <string name="no_address_details_added_yet">No address details added yet</string>
    <string name="order_summary">Order Summary</string>
    <string name="invoice_information">Invoice information</string>
    <string name="cash">Cash</string>
    <string name="transfer">Transfer</string>
    <string name="atm_internet_banking">ATM/Internet Banking</string>
    <string name="pay">Pay</string>
    <string name="add_your_address">Add Your Address</string>
    <string name="your_name">Your name</string>
    <string name="your_address">Your Address</string>
    <string name="your_details_address">Your Details Address</string>
    <string name="eg_name_of_nearby_building_place">eg: name of nearby building/place</string>
    <string name="notes_to_the_driver">Notes to the driver</string>
    <string name="detailed_location_instructions_for_the_driver">detailed location instructions for the driver</string>
    <string name="save_address">Save Address</string>
    <string name="_77_ngo_235_thuong_cat">77 ngo 235 thuong cat</string>
    <string name="duy_huy">Duy Huy</string>
    <string name="cancel">Cancel</string>
    <string name="history_order">History Order</string>
    <string name="payment_method_cash">Cash</string>
    <string name="payment_method_transfer">Transfer</string>
    <string name="payment_method_atm">ATM / VisaCard</string>
    <string name="your_cart">Your Cart</string>
    <string name="delete">Delete</string>
    <string name="the_order_has_been_placed_successfully_please_select_the_history_section_of_the_order_in_the_bar_to_view_the_order_history">The order has been placed successfully. Please select the history section of the order in the bar to view the order history</string>
    <string name="yes_i_know">Yes ! I know</string>
    <string name="_84">+84</string>
    <string name="please_give_us_feedback_all_your_comments_will_be_heard_by_us_to_improve">Please give us feedback. All your comments will be heard by us to improve</string>
    <string name="submit">Submit</string>
    <string name="gmail">Gmail</string>
    <string name="zalo">Zalo</string>

    <string name="facebook_app_id">977777126572174</string>
    <string name="splash_text">"Our platform offers Android development resources such as exercises, quizzes, assignments, and graduation projects. "</string>
</resources>