<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    app:cardCornerRadius="10dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <ImageView
                                android:id="@+id/dismissDialog"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_marginTop="@dimen/_12sdp"
                                android:src="@drawable/ic_baseline_arrow_back_24" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:gravity="center_horizontal"
                                android:paddingBottom="@dimen/_10sdp"
                                android:text="Update your Address"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_16ssp" />
                        </LinearLayout>
                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/your_name"
                            android:textColor="@color/text_secondary" />

                        <EditText
                            android:id="@+id/inputName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@drawable/background_input"
                            android:paddingStart="@dimen/_10sdp"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:hint=""
                            android:text="@string/your_address"
                            android:textColor="@color/text_secondary" />

                        <EditText
                            android:id="@+id/inputAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@drawable/background_input"
                            android:paddingStart="@dimen/_10sdp"
                            android:textSize="@dimen/_12ssp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/your_details_address"
                            android:textColor="@color/text_secondary" />

                        <EditText
                            android:id="@+id/inputDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@drawable/background_input"
                            android:hint="@string/eg_name_of_nearby_building_place"
                            android:paddingStart="@dimen/_10sdp"
                            android:textSize="@dimen/_12ssp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/notes_to_the_driver"
                            android:textColor="@color/text_secondary" />

                        <EditText
                            android:id="@+id/inputNote"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:background="@drawable/background_input"
                            android:hint="@string/detailed_location_instructions_for_the_driver"
                            android:paddingStart="@dimen/_10sdp"
                            android:textSize="@dimen/_12ssp"
                            tools:ignore="RtlSymmetry" />

                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="horizontal">

                           <androidx.appcompat.widget.AppCompatButton
                               android:id="@+id/update"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:layout_marginStart="@dimen/_12sdp"
                               android:layout_marginTop="@dimen/_24sdp"
                               android:layout_marginEnd="@dimen/_12sdp"
                               android:layout_marginBottom="@dimen/_12sdp"
                               android:background="@drawable/background_button_large"
                               android:text="@string/save_address"
                               android:layout_weight="1"
                               android:textColor="@color/white"
                               android:textSize="@dimen/_10sdp"
                               android:textStyle="bold" />

                           <androidx.appcompat.widget.AppCompatButton
                               android:id="@+id/dismisUpdate"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:layout_weight="1"
                               android:layout_marginStart="@dimen/_12sdp"
                               android:layout_marginTop="@dimen/_24sdp"
                               android:layout_marginEnd="@dimen/_12sdp"
                               android:layout_marginBottom="@dimen/_12sdp"
                               android:background="@drawable/background_button_cancle"
                               android:text="@string/cancel"
                               android:textColor="@color/primary"
                               android:textSize="@dimen/_10sdp"
                               android:textStyle="bold" />
                       </LinearLayout>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>