<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:orientation="vertical"
    tools:context=".fragment.FeedbackFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center_horizontal"
        android:text="Feedback"
        android:textColor="@color/primary"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/your_name"
                    android:textColor="@color/text_secondary" />

                <EditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/background_input"
                    android:paddingStart="@dimen/_10sdp"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint=""
                    android:text="Your E-mail"
                    android:textColor="@color/text_secondary"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/background_input"
                    android:paddingStart="@dimen/_10sdp"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="PhoneNumber"
                    android:textColor="@color/text_secondary" />

                <EditText
                    android:id="@+id/inputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/_84"
                    android:paddingStart="@dimen/_10sdp"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Feedback"
                    android:textColor="@color/text_secondary" />

                <EditText
                    android:id="@+id/inputFeed"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/background_input"
                    android:gravity="top"
                    android:hint="@string/please_give_us_feedback_all_your_comments_will_be_heard_by_us_to_improve"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:background="@drawable/background_button_large"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>